Atualização do backEnd para puro EF
Criação do formulario de cadastro de participante.module.ts

ps:. Verificar campo data angular > api

--- a/AvivatectParty - Client/package.json
+++ b/AvivatectParty - Client/package.json
@@ -25,6 +25,7 @@
     "mydatepicker": "^2.6.3",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
